--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../sass/main.css">
-    <link rel="stylesheet" href="../sass/media.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Filligri</title>
 </head>
 <body>
@@ -26,10 +26,10 @@
                 </div>
                 <div class="header_box_logo">
                     <div class="header_box_logo_inner">
-                        <img src="../assets/logo/1.png" alt="img" class="header_logo">
+                        <img src="assets/logo/1.png" alt="img" class="header_logo">
                     </div>
                     <div class="profile_box_menu">
-                        <button class="profle_button">
+                        <button class="profile_button">
                             <i class="fa-solid fa-user"></i>
                         </button>
                         <div class="profile_actions">
@@ -51,15 +51,15 @@
                     <div class="header_box_info_social">
                         <div class="social_box">
                             <a href="https://t.me/Filligri" class="social_route"></a>
-                            <img src="../assets/vector/1.svg" alt="telegram" class="social_img">
+                            <img src="assets/vector/1.svg" alt="telegram" class="social_img">
                         </div>
                         <div class="social_box">
                             <a href="https://wa.me/79092585901" class="social_route"></a>
-                            <img src="../assets/vector/2.svg" alt="whatsapp" class="social_img">
+                            <img src="assets/vector/2.svg" alt="whatsapp" class="social_img">
                         </div>
                         <div class="social_box">
                             <a href="#" class="social_route"></a>
-                            <img src="../assets/vector/3.svg" alt="vk" class="social_img">
+                            <img src="assets/vector/3.svg" alt="vk" class="social_img">
                         </div>
                         <div class="profile_box">
                             <button class="profle_button">
@@ -87,7 +87,7 @@
 </header>
 <main>
     <section class="intro_section">
-        <img src="../assets/image/8.svg" alt="svg" class="figure">
+        <img src="assets/image/8.svg" alt="svg" class="figure">
         <div class="intro_container">
             <div class="intro_box">
                 <h1 class="intro_title">Скидка 10 %</h1>
@@ -98,6 +98,6 @@
     </section>
 </main>
 
-<script src="../js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
