--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <img src="assets/logo/1.png" alt="img" class="header_logo">
                     </div>
                     <div class="profile_box_menu">
-                        <button class="profile_button">
+                        <button class="profile_button_mobile">
                             <i class="fa-solid fa-user"></i>
                         </button>
-                        <div class="profile_actions">
+                        <div class="profile_actions_mobile">
                             <button class="login_button">Войти</button>
                             <button class="sign-up_button">Разегистрироваться</button>
                         </div>
@@ -62,7 +62,7 @@
                             <img src="assets/vector/3.svg" alt="vk" class="social_img">
                         </div>
                         <div class="profile_box">
-                            <button class="profle_button">
+                            <button class="profile_button">
                                 <i class="fa-solid fa-user"></i>
                             </button>
                             <div class="profile_actions">
