--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Автохимия</h1>
                                     </div>
-                                    <img src="./assets/image/2.svg" alt="auto-chemical" class="auto_chemical_img">
+                                    <img src="./assets/image/2.png" alt="auto-chemical" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -211,7 +211,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Клининг</h1>
                                     </div>
-                                    <img src="./assets/image/3.svg" alt="cleaning" class="auto_chemical_img">
+                                    <img src="./assets/image/3.png" alt="cleaning" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -224,7 +224,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Уход за собой</h1>
                                     </div>
-                                    <img src="./assets/image/4.svg" alt="self-care" class="auto_chemical_img">
+                                    <img src="./assets/image/4.png" alt="self-care" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
