--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="about-us_row">
                 <div class="col-7 about-us_img_col">
                     <div class="about-us_img_box">
-                        <img src="/assets/image/13.png" alt="about us" class="about-us_img">
+                        <img src="/assets/image/6.jpg" alt="about us" class="about-us_img">
                     </div>
                 </div>
                 <div class="col-5 about-us_info_col">
