--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <section class="footer_section">
         <div class="footer_container">
             <div class="footer_logo_box">
-                <img src="/assets/logo/2.svg" alt="logo" class="footer_logo">
+                <img src="./assets/logo/2.svg" alt="logo" class="footer_logo">
             </div>
             <div class="footer_box">
                 <div class="col-6 news-letter_col">
