--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Автохимия</h1>
                                     </div>
-                                    <img src="./assets/image/2.png" alt="auto-chemical" class="auto_chemical_img">
+                                    <img src="./assets/image/2.jpg" alt="auto-chemical" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -211,7 +211,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Клининг</h1>
                                     </div>
-                                    <img src="./assets/image/3.png" alt="cleaning" class="auto_chemical_img">
+                                    <img src="./assets/image/3.jpg" alt="cleaning" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -224,7 +224,7 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Уход за собой</h1>
                                     </div>
-                                    <img src="./assets/image/4.png" alt="self-care" class="auto_chemical_img">
+                                    <img src="./assets/image/4.jpg" alt="self-care" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <i class="fa-solid fa-chevron-right"></i>
@@ -334,7 +334,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 navigation_box_col">
+                        <div class="col-4 navigation_box_col selected-col">
                             <div class="navigation_box_box">
                                 <h2 class="nav_route">Контакты</h2>
                                 <div class="nav_links_box">
