--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <title>Filligri</title>
 </head>
-<body id="body">
+<body>
 <header>
     <div class="header_wrapper">
         <div class="header_container">
@@ -23,7 +24,7 @@
                 <div class="header_box_searcher">
                     <input type="text" class="input_search">
                     <button class="button_search">
-                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fi fi-rr-search"></i>
                     </button>
                 </div>
                 <div class="header_box_logo">
@@ -71,6 +72,54 @@
         <div class="navigation_wrapper">
             <div class="navigation_box">
                 <a href="#" class="nav_routes">Каталог</a>
+                <div class="catalog_popup_box">
+                    <div class="col-5 main-routes_col">
+                        <div class="popup_box_main-routes">
+                            <img src="./assets/image/13.png" alt="figure" class="popup_figure">
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Бытовая химия</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Профессиональный клининг</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Промышленная химия</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Автохимия</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Уход за собой</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                            <div class="main-route_box">
+                                <a href="#" class="main_route_link">Продукция для гостиниц</a>
+                                <i class="fa-solid fa-chevron-right"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-7 catalog-routes_col">
+                        <div class="popup_box_routes_box">
+                            <a href="#" class="route_link">Средства для пола</a>
+                            <a href="#" class="route_link">Очиститель стекол</a>
+                            <a href="#" class="route_link">Средства для мытья посуды</a>
+                            <a href="#" class="route_link">Чистящие средства для кухни и ванной</a>
+                            <a href="#" class="route_link">Стиральные порошки</a>
+                        </div>
+                    </div>
+                </div>
                 <a href="#" class="nav_routes">Акции</a>
                 <a href="#" class="nav_routes">О нас</a>
                 <a href="#" class="nav_routes">Контакты</a>
@@ -156,6 +205,42 @@
                                 </div>
                                 <button class="toCart-button">В корзину</button>
                             </div>
+                            <div class="cards_slider_card swiper-slide">
+                                <img src="./assets/cards/4.png" alt="card" class="card_img">
+                                <div class="card_info">
+                                    <h1 class="card_title">ART&FACT. ANTI-AGE AND LIGHTENING FACE CREAM</h1>
+                                    <p class="card_description">Крем для разглаживания морщин </p>
+                                    <span class="card_price">740 ₽</span>
+                                </div>
+                                <button class="toCart-button">В корзину</button>
+                            </div>
+                            <div class="cards_slider_card swiper-slide">
+                                <img src="./assets/cards/4.png" alt="card" class="card_img">
+                                <div class="card_info">
+                                    <h1 class="card_title">ART&FACT. ANTI-AGE AND LIGHTENING FACE CREAM</h1>
+                                    <p class="card_description">Крем для разглаживания морщин </p>
+                                    <span class="card_price">740 ₽</span>
+                                </div>
+                                <button class="toCart-button">В корзину</button>
+                            </div>
+                            <div class="cards_slider_card swiper-slide">
+                                <img src="./assets/cards/4.png" alt="card" class="card_img">
+                                <div class="card_info">
+                                    <h1 class="card_title">ART&FACT. ANTI-AGE AND LIGHTENING FACE CREAM</h1>
+                                    <p class="card_description">Крем для разглаживания морщин </p>
+                                    <span class="card_price">740 ₽</span>
+                                </div>
+                                <button class="toCart-button">В корзину</button>
+                            </div>
+                            <div class="cards_slider_card swiper-slide">
+                                <img src="./assets/cards/4.png" alt="card" class="card_img">
+                                <div class="card_info">
+                                    <h1 class="card_title">ART&FACT. ANTI-AGE AND LIGHTENING FACE CREAM</h1>
+                                    <p class="card_description">Крем для разглаживания морщин </p>
+                                    <span class="card_price">740 ₽</span>
+                                </div>
+                                <button class="toCart-button">В корзину</button>
+                            </div>
                         </div>
                     </div>
                     <div class="navigation_block">
@@ -175,7 +260,9 @@
                         <div class="box_catalog">
                             <h1 class="box_catalog_title">Каталог</h1>
                             <button class="box_catalog_button">
-                                <i class="fa-solid fa-play"></i>
+                                <svg style="padding: 6px 0 0 4px" width="25" height="34" viewBox="0 0 25 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M25 15.105L0.249999 29.3944L0.25 0.81556L25 15.105Z" fill="white"/>
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -184,7 +271,9 @@
                             <h1 class="box_household_chemical_title">Бытовая химия</h1>
                             <div class="box_household_chemical_figure">
                                 <button class="box_household_chemical_button">
-                                    <i class="fa-solid fa-chevron-right"></i>
+                                    <svg style="margin: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.52924 1.16406L10.7939 8.44347L1.52924 15.7229" stroke="white" stroke-width="2.92973"/>
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -201,20 +290,24 @@
                                     <img src="./assets/image/2.jpg" alt="auto-chemical" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
-                                            <i class="fa-solid fa-chevron-right"></i>
+                                            <svg style="padding: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1.52924 1.16406L10.7939 8.44347L1.52924 15.7229" stroke="white" stroke-width="2.92973"/>
+                                            </svg>
                                         </button>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-4 auto-clear-care_col">
                                 <div class="auto-clear-care_box">
-                                    <div class="auto-clear-care_inner">
+                                    <div class="auto-clear-care_inner a-c-c_blue_bg">
                                         <h1 class="auto-chemical_title">Клининг</h1>
                                     </div>
                                     <img src="./assets/image/3.jpg" alt="cleaning" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
-                                        <button class="auto-clear-care_button-route">
-                                            <i class="fa-solid fa-chevron-right"></i>
+                                        <button class="auto-clear-care_button-route a-c-c_blue_bg">
+                                            <svg style="padding: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1.52924 1.16406L10.7939 8.44347L1.52924 15.7229" stroke="white" stroke-width="2.92973"/>
+                                            </svg>
                                         </button>
                                     </div>
                                 </div>
@@ -227,7 +320,9 @@
                                     <img src="./assets/image/4.jpg" alt="self-care" class="auto_chemical_img">
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
-                                            <i class="fa-solid fa-chevron-right"></i>
+                                            <svg style="padding: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M1.52924 1.16406L10.7939 8.44347L1.52924 15.7229" stroke="white" stroke-width="2.92973"/>
+                                            </svg>
                                         </button>
                                     </div>
                                 </div>
@@ -239,7 +334,9 @@
                             <h1 class="pro-for-living_box_title">Продукции для гостиниц</h1>
                             <div class="pro-for-living_box_figure">
                                 <button class="pro-for-living_box_button">
-                                    <i class="fa-solid fa-chevron-right"></i>
+                                    <svg style="margin: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.52924 1.16406L10.7939 8.44347L1.52924 15.7229" stroke="white" stroke-width="2.92973"/>
+                                    </svg>
                                 </button>
                             </div>
                         </div>
@@ -292,6 +389,7 @@
 </main>
 <footer>
     <section class="footer_section">
+        <img src="./assets/image/12.png" alt="figure" class="footer_figure">
         <div class="footer_container">
             <div class="footer_logo_box">
                 <img src="./assets/logo/2.svg" alt="logo" class="footer_logo">
