--- a/index.html
+++ b/index.html
@@ -287,7 +287,11 @@
                                     <div class="auto-clear-care_inner">
                                         <h1 class="auto-chemical_title">Автохимия</h1>
                                     </div>
-                                    <img src="./assets/image/2.jpg" alt="auto-chemical" class="auto_chemical_img">
+                                    <div class="absolute_elements">
+                                        <img src="./assets/image/2-bg.jpg" alt="auto-chemical" class="auto_chemical_img">
+                                        <img src="./assets/image/2-spraypaint.png" alt="spray" class="spray_element">
+                                        <img src="./assets/image/2-wheel.png" alt="wheel" class="wheel_element">
+                                    </div>
                                     <div class="auto-clear-care_route">
                                         <button class="auto-clear-care_button-route">
                                             <svg style="padding: 2px 0 0 2px" width="18" height="18" viewBox="0 0 14 17" fill="none" xmlns="http://www.w3.org/2000/svg">
